web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pets-web-deployment
  namespace: default
  labels:
    app: pets-web
spec:
  replicas: 2 # Запускаем 2 одинаковые копии сайта для надежности
  selector:
    matchLabels:
      app: pets-web
  template:
    metadata:
      labels:
        app: pets-web
    spec:
      containers:
        - name: web-app
          image: my-first-pets-app:v3
          imagePullPolicy: Never 
          ports:
            - containerPort: 80 # Стандартный порт для веб-сайтов
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
            requests:
              memory: "64Mi"
              cpu: "100m"
